# Kaggle-Math

./: .gitignore  README.md  program.md  pyproject.toml
configs/: logging.yaml  model.yaml  research_policy.yaml  router.yaml  runtime.yaml  solver.yaml
docs/: artifact_ledger_template.md  aws_h100_inference.md  compliance_checklist.md  kaggle_packaging.md  reproducibility.md
notebooks/: README.md
prompts/: code_first.txt  critique.txt  followup_solver.txt  reasoning_first.txt  system_solver.txt
scripts/: launch_vllm_server.sh  package_kaggle_bundle.py  prepare_eval_data.py  run_smoke.py  setup_aws_ami.sh
src/: __init__.py  answer_extract.py  config.py  kaggle_entry.py  memory.py  models.py  prompt_builder.py  python_exec.py  router.py  sampler.py  selector.py  solve_one.py
src/deploy/: __init__.py  bundle.py
src/research/: __init__.py  budget.py  eval.py
src/runtime/: __init__.py  base.py  factory.py  launcher.py  mock.py  vllm.py
src/solver/: __init__.py  memory.py  parsing.py  prompts.py  routing.py  selector.py  solve.py
tests/: test_answer_extract.py  test_budget.py  test_config.py  test_eval.py  test_launcher.py  test_package_kaggle_bundle.py  test_parsing.py  test_python_exec.py  test_router.py  test_routing.py  test_runtime_mock.py  test_selector.py  test_solve_one.py
