[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-math"
version = "0.1.0"
description = "AIMO3 cloud-first math solver baseline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
runtime = [
  "accelerate>=0.34.0",
  "safetensors>=0.4.0",
  "transformers>=4.48.0",
  "torch>=2.2.0",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
